--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 # OAuth2 Redirect URI (Frontend)
 app.oauth2.redirect-uri=${OAUTH2_REDIRECT_URI:http://localhost:3000/oauth2/redirect}
 
+# CORS Configuration
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
+
 # Server Configuration
 server.port=${SERVER_PORT}
 
