--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=seonbistudy
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,7 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
 
 # OAuth2 Google Configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
@@ -30,6 +31,9 @@ app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://loc
 
 # Server Configuration
 server.port=${SERVER_PORT}
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
+
 
 # Logging
 logging.level.org.springframework.security=${LOGGING_LEVEL}
