[streak] Enhance streak tracking and messaging on login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 # Logging
 logging.level.org.springframework.security=${LOGGING_LEVEL}
+
+# message
+spring.messages.basename=messages/streak.properties
+spring.messages.encoding=UTF-8
