Refactor streak tracking logic to simplify first login check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,5 +39,5 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 logging.level.org.springframework.security=${LOGGING_LEVEL}
 
 # message
-spring.messages.basename=messages/streak.properties
+spring.messages.basename=messages/streak
 spring.messages.encoding=UTF-8
